app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "Stopbuck";
  src: url("/fonts/Stopbuck.ttf");
}

:root {
  --background: #121212;
  --foreground: #ffffff;
}

html {
  scroll-behavior: smooth;
  width: 100%;
  overflow-x: hidden;
}

body {
  color: var(--foreground);
  background: var(--background);
}

.text-shadow {
  text-shadow: 4px 0 #201a17, -4px 0 #201a17, 0 4px #201a17, 0 -4px #201a17,
    4px 4px #201a17, -4px -4px #201a17, -4px 4px #201a17, 4px -4px #201a17;
}

.text-shadow-red {
  text-shadow: 4px 0 #db0007, -4px 0 #db0007, 0 4px #db0007, 0 -4px #db0007,
    4px 4px #db0007, -4px -4px #db0007, -4px 4px #db0007, 4px -4px #db0007;
}

.text-shadow-yellow {
  text-shadow: 4px 0 #ffbc0d, -4px 0 #ffbc0d, 0 4px #ffbc0d, 0 -4px #ffbc0d,
    4px 4px #ffbc0d, -4px -4px #ffbc0d, -4px 4px #ffbc0d, 4px -4px #ffbc0d;
}

.text-shadow-black {
  text-shadow: 3px 0 #000, -3px 0 #000, 0 3px #000, 0 -3px #000,
    3px 3px #000, -3px -3px #000, -3px 3px #000, 3px -3px #000;
}

.glow-yellow {
  box-shadow: 0 0 15px rgba(255, 188, 13, 0.4);
}

.glow-red {
  box-shadow: 0 0 15px rgba(219, 0, 7, 0.4);
}

.menu-border {
  border: 4px solid #000;
  box-shadow: 5px 5px 0px #db0007;
}

.cloud {
  height: 180px; /* control the size */
  aspect-ratio: 1.8;
  --g: radial-gradient(50% 50%, #000 98%, #0000) no-repeat;
  --s: radial-gradient(70% 70%, #000 98%, #0000) no-repeat;
  mask: var(--g) 100% 100%/30% 60%, var(--g) 70% 0/50% 100%,
    var(--g) 0 100%/36% 68%, var(--g) 27% 18%/26% 40%,
    linear-gradient(#000 0 0) bottom/67% 58% no-repeat;
  background: #e4e0e1;
}

